--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
         var h = prompt( "Unesite visinu valjka:");
         
-        var zapremina = parseInt(r)**2 * Math.PI * parseInt(h)   
-        alert("Zapremina valjka je:" + zapremina)
+        var zapremina = parseInt(r)**2 * Math.PI * parseInt(h);  
+        alert("Zapremina valjka je:" + zapremina);
 
 
     </script>
